# CJK-Native-Model

./: .gitignore  COMPATIBILITY.md  IMPLEMENTATION_SUMMARY.md  MULTI_GPU_FIX.md  QUICKSTART.md  README.md  TRAINING.md  deploy.sh  environment.yml  pyproject.toml  requirements.txt  setup.sh  tokenization_cnm.py
cnm_bert/: __init__.py  requirements.txt
cnm_bert/assets/: ids.txt  vocab.txt  wiki_zh_sample.txt
cnm_bert/data/: char_to_ids_tree.json
cnm_bert/scripts/: run_pretraining.py
cnm_bert/src/: __init__.py  dataset.py  etl_ids.py  modeling_cnm.py  tokenization_cnm.py
experiments/configs/: pretrain_ablation_no_struct.yaml  pretrain_base.yaml
scripts/: 01_build_ids_lexicon.py  02_prepare_corpus.py  03_pretrain.py  04_evaluate_clue.py  debug_dataset_wrapper.py  debug_ids_format.py  debug_trainer.py  debug_training.py  download_common_crawl.py  download_ids.py  download_wikipedia.py  setup_wandb.py  test_full_pipeline.py  test_trainer_dataset.py  train.py  train_simple.py  validate_setup.py
src/cnm_bert/: __init__.py
src/cnm_bert/data/: __init__.py  collator.py  dataset.py  pretrain_dataset.py
src/cnm_bert/etl/: __init__.py  corpus_preprocessing.py  heuristics.py  ids_parser.py
src/cnm_bert/modeling/: __init__.py  cnm_embeddings.py  cnm_model.py  configuration_cnm.py  tree_encoder.py
src/cnm_bert/tokenization/: __init__.py  tokenization_cnm.py
src/cnm_bert/utils/: __init__.py  logging.py  metrics.py  wandb_callback.py
tests/: test_ids_parser.py  test_model.py  test_tokenizer.py
trainer_output/checkpoint-3/: config.json
